--- a/15-deeper_sampling.Rmd
+++ b/15-deeper_sampling.Rmd
@@ -32,12 +32,12 @@ $$
 $$
 
 
-However, when there are multiple populations we also have to take into account the **variability in population means** when determining the *variance of sample means*. We use $A$ to indicate the number of populations. If there are three populations then $A = 3$. We use the formula below to calculate the variance of the population means:
+However, when there are multiple populations we also have to take into account the **variability in population means** when determining the *variance of sample means*. We use $a$ to indicate the number of populations. If there are three populations then $a = 3$. We use the formula below to calculate the variance of the population means:
 
 $$
 \begin{aligned} 
 \text{variance in population means} &= \sigma_{\mu_A}^2 \\
-&= \frac{\sum (\mu_{A_i}-\mu_{\mu_A})^2}{A} \\
+&= \frac{\sum (\mu_{A_i}-\mu_{\mu_A})^2}{a} \\
 \end{aligned}
 $$
 
@@ -46,7 +46,7 @@ where
 
 $$
 \begin{aligned} 
-\mu_{\mu_A} &=  \frac{\sum{\mu_A}}{A}
+\mu_{\mu_A} &=  \frac{\sum{\mu_A}}{a}
 \end{aligned} 
 $$
 
@@ -150,8 +150,8 @@ But we also have to calculate the variance in population means. But to calculate
 
 $$
 \begin{aligned} 
-\mu_{\mu_A} &=  \frac{\sum{\mu_A}}{A} \\
-&=  \frac{\mu_{A1}+\mu_{A2}+\mu_{A3}}{A} \\
+\mu_{\mu_A} &=  \frac{\sum{\mu_A}}{a} \\
+&=  \frac{\mu_{A1}+\mu_{A2}+\mu_{A3}}{a} \\
 &=  \frac{172.50 + 172.50 + 172.50}{3} \\
 &= \frac{517.50}{3}\\
 &= 172.50 \\
@@ -162,7 +162,7 @@ We use this value to calculate the variance of the population means. Which we fi
 
 $$
 \begin{aligned} 
-\sigma_{\mu_A}^2 &=  \frac{\sum (\mu_{A_i}-\mu_{\mu_A})^2}{A} \\
+\sigma_{\mu_A}^2 &=  \frac{\sum (\mu_{A_i}-\mu_{\mu_A})^2}{a} \\
 &=  \frac{(\mu_{A_1} - \mu_{\mu_A})^2 + (\mu_{A_2} - \mu_{\mu_A})^2 + (\mu_{A_3} - \mu_{\mu_A})^2}{3} \\
 &=  \frac{(172.50 - 172.50)^2 + (172.50 - 172.50)^2 + (172.50 - 172.50)^2}{3} \\
 &=  \frac{0}{3} \\
@@ -257,8 +257,8 @@ But we also have to calculate the variance in population means. But to calculate
 
 $$
 \begin{aligned} 
-\mu_{\mu_A} &=  \frac{\sum{\mu_A}}{A} \\
-&=  \frac{\mu_{A1}+\mu_{A2}+\mu_{A3}}{A} \\
+\mu_{\mu_A} &=  \frac{\sum{\mu_A}}{a} \\
+&=  \frac{\mu_{A1}+\mu_{A2}+\mu_{A3}}{a} \\
 &=  \frac{152.50 + 172.50 + 192.50}{3} \\
 &= \frac{517.50}{3}\\
 &= 172.50 \\
@@ -269,7 +269,7 @@ We use this value to calculate the variance of the population means. Which we fi
 
 $$
 \begin{aligned} 
-\sigma_{\mu_A}^2 &=  \frac{\sum (\mu_{A_i}-\mu_{\mu_A})^2}{A} \\
+\sigma_{\mu_A}^2 &=  \frac{\sum (\mu_{A_i}-\mu_{\mu_A})^2}{a} \\
 &=  \frac{(\mu_{A_1} - \mu_{\mu_A})^2 + (\mu_{A_2} - \mu_{\mu_A})^2 + (\mu_{A_3} - \mu_{\mu_A})^2}{3} \\
 &=  \frac{(152.50 - 172.50)^2 + (172.50 - 172.50)^2 + (192.50 - 172.50)^2}{3} \\
 &=  \frac{(-20)^2 + (0)^2 + (20)^2}{3} \\
