--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -20,7 +20,7 @@ Understanding the logic behind both methods for estimating the variance of the d
 
 ## A student population
 
-Consider a scenario where there is a large university with 100,000 students and we have the heights of all 100,000 students. The mean height of all 100,000 students is 172.50 cm and the variance is 156.3236 cm$^2$. The heights of all the university students are illustrated in Figure \@ref(fig:chdeepfigure1)A. This figure is shaded with stick figures wearing trousers that remind us this distribution represents people.
+Consider a scenario where there is a large university with 100,000 students and we have the heights of all 100,000 students. We think of this as a population of student heights. The mean height of all 100,000 students is 172.50 cm and the variance is 156.3236 cm$^2$. The heights of all the university students are illustrated in Figure \@ref(fig:chdeepfigure1)A. This figure is shaded with stick figures wearing trousers that remind us this distribution represents people.
 
 \
 
@@ -28,7 +28,7 @@ Consider a scenario where there is a large university with 100,000 students and 
 knitr::include_graphics("ch_deep_sampling/images/figure1.png")
 ```
 
-The mean of a population of 100,000 individuals is calculated using Equation \@ref(eq:popmeanchdeep) below.
+The mean of a population of 100,000 student heights is calculated using Equation \@ref(eq:popmeanchdeep) below.
 
 ```{=tex}
 \begin{equation} 
@@ -36,7 +36,7 @@ The mean of a population of 100,000 individuals is calculated using Equation \@r
       (\#eq:popmeanchdeep)
 \end{equation}
 ```
-The variance of a population of 100,000 individuals is calculated using Equation \@ref(eq:popvardeep) below.
+The variance of a population of 100,000 student heights is calculated using Equation \@ref(eq:popvardeep) below.
 
 ```{=tex}
 \begin{equation} 
@@ -48,17 +48,21 @@ The variance of a population of 100,000 individuals is calculated using Equation
 
 ## Random sampling process
 
-Now imagine that we are interested in studying the random sampling process. Specifically we are interested in examining the variability in sample means that occurs when taking random samples of students from the population of people (see Figure \@ref(fig:chdeepfigure1)). Indeed, imagine that we obtained a sample of $n$ = 5 students and calculated a sample mean ($\bar{x}$). Then we repeated this sampling process an infinite number of times such that we have an infinite number of sample means. This set of an **infinite number of sample means** is conceptually illustrated in Figure \@ref(fig:chdeepfigure1)B and we refer to it as the **sampling distribution of the mean**. Moreover, **because we sampled from a single population**, whose variance is 156.3236 (i.e., $\sigma_{people}^2 =156.3236$), the variability in sample means, when each sample size is 5 ($n=5$), is due to the random sampling error only.
+Now imagine that we are interested in studying the random sampling process. Specifically we are interested in examining the variability in sample means that occurs when taking random samples of students heights from the population of people (see Figure \@ref(fig:chdeepfigure1)). Indeed, imagine that we obtained a sample of $n$ = 5 students and measured their heights. Then we calculated a sample mean ($\bar{x}$) based on those heights. Then we repeated this sampling process an infinite number of times such that we have an infinite number of sample means each based on the heights of 5 students. This set of an **infinite number of sample means** is conceptually illustrated in Figure \@ref(fig:chdeepfigure1)B and we refer to it as the **sampling distribution of the mean**. Moreover, **because we sampled from a single population**, whose variance is 156.3236 (i.e., $\sigma_{people}^2 =156.3236$), the variability in sample means, when each sample size is 5 ($n=5$), is due to the random sampling error only.
 
 ## Population: What's in a name
 
-Typically, in psychology, when we use the word "population" we are referring to a population of people - such as those illustrated in Figure \@ref(fig:chdeepfigure1)A. However, in statistics, a population is simply a set of elements (often people) about which we wish to draw conclusions. In this chapter, we shift our focus from thinking of the distribution of people in Figure \@ref(fig:chdeepfigure1)A as a population to **also** thinking of the distribution of sample means in Figure \@ref(fig:chdeepfigure1)B as a population. Doing so may seem counter intuitive but it the logical foundation for Analysis of Variance (ANOVA).
+Typically, in psychology, when we use the word "population" we are referring to a population of people with respect to some dependent variable - such as the heights illustrated in Figure \@ref(fig:chdeepfigure1)A. However, in statistics, a population is simply a set of elements (often people) about which we wish to draw conclusions. In this chapter, we shift our focus from thinking of the distribution of people in Figure \@ref(fig:chdeepfigure1)A as a population to **also** thinking of the distribution of sample means in Figure \@ref(fig:chdeepfigure1)B as a population. Doing so may seem counter intuitive but it the logical foundation for Analysis of Variance (ANOVA).
 
 ### Sample means in context
 
-Thinking of the distribution of sample means as a population can be a bit tricky - since there are two populations that we could be referring to when we use the word "population". Notation helps to keep things straight. In this book, when we are talking about a distribution of people (see Figure \@ref(fig:chdeepfigure1)A), we use $N$ to indicate the number people in the population and $n$ to refer to the number of people in a subset of the population (what we typically refer to as a sample). Likewise, when we are talking about a distribution of sample means (see Figure \@ref(fig:chdeepfigure1)B), we use $K$ to indicate the number of sample means in the population and $a$ to refer to the number of sample means in a subset of the population. I know it seems odd to use two different letters to indicate the number of sample means for the population ($K$) and the subset of the population ($a$) - but the reason for this approach will become clear in the next chapter.
+Thinking of the distribution of sample means as a population can be a bit tricky - since there are two populations that we could be referring to when we use the word "population". Notation helps to keep things straight. In this book, when we are talking about a distribution of people (see Figure \@ref(fig:chdeepfigure1)A), we use $N$ to indicate the number people in the population and $n$ to refer to the number of people in a subset of the population (what we typically refer to as a sample). Likewise, when we are talking about a distribution of sample means (see Figure \@ref(fig:chdeepfigure1)B), we use $K$ to indicate the number of sample means in the population.
 
-Consider a concrete example. When we obtain a sample of people ($n$ = 5) we can think of the people in the sample as a subset of the population of people ($N$=100,000), see Figure \@ref(fig:chdeepfigure1)A. If we calculate a sample mean ($\bar{x}$) based on those 5 people we can think of that single sample mean ($a$ = 1) as being a subset of the population of sample means ($K = \infty$), see Figure \@ref(fig:chdeepfigure1)B. Alternatively, imagine that we obtained three samples from the population of people, Figure \@ref(fig:chdeepfigure1)A, each composed of 5 people ($n = 5$ for each sample). Then we calculated the sample mean ($\bar{x}$) for each of the three samples. We could think of those three sample means ($a$ = 3) as a subset of the population of sample means ($K = \infty$), see Figure \@ref(fig:chdeepfigure1)B.
+Consider a concrete example. When we obtain a sample of five people's heights ($n$ = 5) we can think of the **people** in the sample as a subset of the population of people ($N$=100,000), see Figure \@ref(fig:chdeepfigure1)A. 
+
+But we can also think of that single sample mean as mean a subset of an infinity large set of sample means,  see Figure \@ref(fig:chdeepfigure1)B. We use ($K = \infty$) to refer to the total number of sample mean in the population of sample means.
+
+When we have one sample mean from this population of same mean we say $a = 1$. If we had three sample means from this population of sample means, \@ref(fig:chdeepfigure1)B, we would say $a = 3$.
 
 ### Distribution of sample means as a population
 
