--- a/16-sampling-nway.Rmd
+++ b/16-sampling-nway.Rmd
@@ -182,6 +182,23 @@ var5 = var(x5)
 var6 = var(x6)
 
 var_all = c(var1, var2, var3, var4, var5, var6)
+
+mean_a1 = mean(c(x1, x2, x3))
+mean_a2 = mean(c(x4, x5, x6))
+
+mean_b1 = mean(c(x1, x4))
+mean_b2 = mean(c(x2, x5))
+mean_b3 = mean(c(x3, x6))
+
+mean_grand = mean(c(x1, x2, x3,x4, x5, x6))
+
+mean_a1s = sprintf("%1.2f", mean_a1)
+mean_a2s = sprintf("%1.2f", mean_a2)
+mean_b1s = sprintf("%1.2f", mean_b1)
+mean_b2s = sprintf("%1.2f", mean_b2)
+mean_b3s = sprintf("%1.2f", mean_b3)
+mean_grands = sprintf("%1.2f", mean_grand)
+
 ```
 
 ### Sample means
@@ -429,6 +446,13 @@ Notice that the degrees of freedom for the sampling error variance is the same f
 ## Main effect variance
 
 ### Means $A$: Juggling
+
+We might wonder if there is an effect of juggling on calmness scores ignoring the effect of prepartion. Said another way, we might wonder if the mean of the **yes** juggling population ($\mu_{A1}$) is different from the mean of the **no** juggling population ($\mu_{A2}$). We examine this question by looking the variance in the population means.
+
+
+
+
+
 
   Juggling| Formula | Expected value | degrees of feedom |
 :--------------:|:--------------:|:------------------:|:---------------:|
