--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -10,11 +10,17 @@ output:
 
 In this chapter we build from a one population scenario to a three population scenario where the three populations have the same mean.
 
-## A tale of two methods
+## A tale of two formulas
 
-In this chapter, we focus on describing the distribution of sample means. Our goal is to understand the logic behind two different methods for estimating the variance of distribution of sample means. A thorough understanding of both of these two estimation methods lays the foundation for understanding Analysis of Variance (ANOVA).
+In this chapter, we focus on describing the distribution of sample means. Our goal is to understand the logic behind two different formulas for estimating the variance of distribution of sample means. A thorough understanding of both of these two estimation approaches lays the foundation for understanding Analysis of Variance (ANOVA).
 
-Understanding the logic behind both methods for estimating the variance of the distribution of sample means is critical. In this chapter, where there is one population of people, the two methods estimate the same thing - variabilty in sample means **due to random sampling**. However, in future chapters, where there are multiple populations of people with different means, the two methods estimate different things. Consequently, to prepare you for those more complex future chapters, it's important to understand the logic behind both methods in the simple case - where there is a single population of people.
+| Approach  | Estimation Formula | Goal  |
+:----------:|:----:|:--------|
+| Approach 1: Total |  $s_{\bar{x}}^2=\frac{\sum (\bar{x}-\bar{\bar{x}})^2}{a-1}$ | Estimate the variance of the sampling distribution. That is, estimate variance of sample mean due to all sources (population differences, random sampling error, etc.).
+| Approach 2: CLT |   $s_{\bar{x}}^2=\frac{s_{people}^2}{n}$  | Estimate the variance in sample mean due ONLY to random sampling error.|
+
+
+Understanding the logic behind both approaches for estimating the variance of the distribution of sample means is critical. In this chapter, where there is one population of people, the two approaches estimate the same thing - variabilty in sample means **due to random sampling**. However, in future chapters, where there are multiple populations of people with different means, the two methods estimate different things. Consequently, to prepare you for those more complex future chapters, it's important to understand the logic behind both methods in the simple case - where there is a single population of people.
 
 **What we learn in this chapter (and the pattern of results we obtain) will serve as frame-of-reference for interpreting more complex situations in future chapters.**
 
@@ -88,7 +94,7 @@ A key point to remember is that the mean of the sample means, $\mu_{\bar{x}}$, w
 
 When there is *one* **population of people** (see Figure \@ref(fig:chdeepfigure1)A) there is a single distribution of sample means that corresponds to that population (see Figure \@ref(fig:chdeepfigure1)B). In this scenario, the sample means differ only because of random sampling. There are two methods for calculating the variance of this distribution of sample means.
 
-### Method 1: Calculate the variance of infinite sample means
+### Approach 1: Total: Calculate the variance of infinite sample means
 
 In this first method, we use an infinite number of sample means and simply calculate the variance, see Equation \@ref(eq:popvarxbardeep) below.
 
@@ -125,9 +131,9 @@ Thus, the "population" variance of the distribution of sample means ($\sigma_{\b
 
 **When there is only one population of people** this formula will reflect variability in sample means due to random sampling. When there is more than one population of people - it becomes more complicated. We'll discuss that situation in a future chapter.
 
-### Method 2: CLT shortcut: *Calculation* of variance of infinite sample means
+### Approach 2: CLT: *Calculation* of variance due to sampling error
 
-Fortunately we don't need to obtain an infinite number of sample means to determine the variance of the distribution of an infinite number of sample means, Figure \@ref(fig:chdeepfigure1)B. There is a "shortcut formula" we can use based on the Central Limit Theorem (CLT), see the formula below.
+Fortunately, **when sampling error is the ONLY source of variability in sample mean** there is a shortcut. We don't need to obtain an infinite number of sample means to determine the variance of the distribution of an infinite number of sample means, Figure \@ref(fig:chdeepfigure1)B. There is a "shortcut formula" we can use based on the Central Limit Theorem (CLT), see the formula below.
 
 $$
 \sigma_{\bar{x}}^2 = \frac{\sigma_{people}^2}{\text{sample size}}
@@ -141,11 +147,12 @@ Be we more often see it represented completely symbolically as per Equation \@re
       (\#eq:popvarCLTxbardeep)
 \end{equation}
 ```
-An inspection of Equation \@ref(eq:popvarCLTxbardeep) reveals the variance of the distribution of sample means (see Figure \@ref(fig:chdeepfigure1)B) depends on both the number of people in each sample ($n$) and the variability in the people's heights in the population (see Figure \@ref(fig:chdeepfigure1)B, $\sigma_{people}^2$).
+
+An inspection of Equation \@ref(eq:popvarCLTxbardeep) reveals the variance of the distribution of sample means **DUE TO RANDOM SAMPLING ERROR ONLY**(see Figure \@ref(fig:chdeepfigure1)B) depends on both the number of people in each sample ($n$) and the variability in the people's heights in the population (see Figure \@ref(fig:chdeepfigure1)B, $\sigma_{people}^2$).
 
 The reason this formula works should not be obvious - at all. If you are looking at this formula trying to figure out why it works - I suggest you stop and just accept that it does work. If you want to understand why it works, I suggest you [consult](https://archive.org/details/statisticsfifthe00will) [@hays1994statistics] who provides a statistical proof for the Central Limit Theorem.
 
-It's helpful, moving forward, to think of this formula ($\frac{\sigma_{people}^2}{n}$) as representing the *variability in means due to random sampling*. No matter the situation - this formula will always reflect the variability in sample means due ONLY to random sampling.
+It's helpful, moving forward, to think of this formula ($\frac{\sigma_{people}^2}{n}$) as representing the *variability in means due to random sampling*. The formula was devired from teh Central Limit Theorem so we refer to it as the CLT approach. No matter the situation - this formula will always reflect the **variability in sample means due ONLY to random sampling**.
 
 Previously, we learned that the variance of the distribution of people in Figure \@ref(fig:chdeepfigure1)A is $\sigma_{people}^2=156.3236$. Consequently, we can use Equation \@ref(eq:popvarCLTxbardeep) to calculate the variance of the distribution of sample means in Figure \@ref(fig:chdeepfigure1)B:
 
@@ -157,23 +164,22 @@ $$
 \end{aligned} 
 $$
 
-Thus, the "population" variance of the distribution of sample means ($\sigma_{\bar{x}}^2$, see Figure \@ref(fig:chdeepfigure1)B) is **calculated**, using Method 2 the CLT shortcut, to be $\sigma_{\bar{x}}^2 = 31.26472$.
+Thus, the "population" variance of the distribution of sample means ($\sigma_{\bar{x}}^2$, see Figure \@ref(fig:chdeepfigure1)B) is **calculated**, using Approach 2 the CLT shortcut, to be $\sigma_{\bar{x}}^2 = 31.26472$.
 
 ### Ratio comparison of two methods
 
-Thus, far we have calculated the variance of the distribution of sample means using two different methods.
+To begin, we are looking at a distribution of sampling means **where the means differ only due to random sampling error**. In this situation, we have calculated the variance of the distribution of sample means using two different methods.
 
--   Method 1: Variance of sample means calculated using sample means
+-   Approach 1: Total variance of sample means calculated using sample means and the variance formula
 
--   Method 2: Variance of sample means calculated using CLT shortcut formula
+-   Approach 2: Variance of sample means, due to random sampling error, calculated using CLT shortcut formula
 
 Although we can just look at the numbers resulting from these two methods and compare them, that's not how statisticians typically handle such comparisons. The approach used by statisticians to compare two numbers is to create a ratio. That is, take one number and divide it by the other number. If the two numbers are the same the ratio will be 1.00. If the ratio is larger than 1.00 it means the number on the top was bigger than the number on the bottom.
 
-\
 
 $$
 \begin{aligned} 
-\text{ratio comparing methods} &= \frac{\text{variance of sample means calculated using sample means}}{\text{variance of sample means calculated using CLT shortcut formula}}\\
+\text{ratio comparing methods} &= \frac{\text{total variance of sample means }}{\text{variance of sample means due to random sampling error}}\\
 &=\frac{\frac{\sum_{i=1}^{A=\infty}{(\bar{x}_i - \mu_{\bar{x}})^2}}{A}}{\frac{\sigma_{people}^2}{n}}\\
 &=\frac{31.26472}{31.26472}\\
 &= 1.00\\
@@ -182,9 +188,9 @@ $$
 
 You can see the ratio comparing these two methods below is 1.00 - so we conclude two methods produced the same result. If the number on the top of the ratio was the *larger* of the two, then the value of the ratio would be greater than 1.00. In contrast, if the number on the top of the ratio was the *smaller* of the two, then the value of the ratio would be less than 1.00. Be sure you understand how to interpet the value of a ratio using these rules before continuing.
 
-In this section, we focused on actually **calculating** the variance of the distribution of sample means using two methods. But to actually calculate this variance we needed an infinite number of sample means (Method 1) or knowledge of the population variance (Method 2). Both are unrealistic methods to determining this value.
+In this section, we focused on actually **calculating** the variance of the distribution of sample means using two approaches. But to actually **calculate** this variance we needed an infinite number of sample means (Approach 1) or knowledge of the population variance (Approach 2). Consequently, it's impractical to **calcualte** either quantity.
 
-In the next section, below, we recognize that we can likely never know or calculate the variance of the distribution of sample means. Instead, we focus on **estimating** the variance of the distribution of sample means. An estimated value is an approximation of the actual value that will differ due to the effects of random sampling.
+In the next section, below, we recognize that we can likely never know or calculate the variance of the distribution of sample means. Instead, we focus on **estimating** the variance of the distribution of sample means. An **estimated value** is an approximation of the actual value that will differ due to the effects of random sampling.
 
 ```{r, include=FALSE}
 # Set up sample information for rest of chapter
@@ -261,7 +267,7 @@ In this section we focus on estimating the variance of the distribution of sampl
 |       2       |         5         |            `r sample_mean2`             |                        `r est_pop_var2`                        |
 |       3       |         5         |            `r sample_mean3`             |                        `r est_pop_var3`                        |
 
-### Method 1: Estimate the variance of infinite sample means using 3 sample means
+### Approach 1: Estimate the total  variance of infinite sample means using 3 sample means
 
 We can use the sample means presented in the table above to estimate the variance of the distribution of sample means as illustrated in the formula below. Recall, we use a lower case character, $a$, to represent the number of sample means (in the case because we have 3 sample means $a = 3$). We think of these three sample means as a subset ($a = 3$) of the distribution of an infinite number of sample means (i.e., a population of sample means, $K=\infty$) illustrated in Figure \@ref(fig:chdeepfigure1)B. Consequently, we use the standard approach of estimating the variance of a larger set of elements from a (i.e., a population of sample means) subset of those elements (i.e., a sample of sample means) by including "-1" in the denominator of the variance formula, see Equation \@ref(eq:estpopvarxbardeep) below.
 
@@ -297,7 +303,7 @@ Thus, the "population" variance of the distribution of sample means ($\sigma_{\b
 
 **IMPORTANT:** The denominator of this variance calculation is $2$ (i.e., $3-1$). Therefore, we say there are 2 degrees of freedom associated with this estimate of the variance of the infinite number of sample means.
 
-### Method 2: CLT shortcut: *Estimation* of variance of infinite sample means
+### Approach 2: CLT shortcut: *Estimation* of variance due to random sampling error
 
 We can use the information presented in the table above in another way to estimate the variance of the distribution of sample means. Indeed, recall that than another approach to calculating the variance of the distribution of sample means is to use the shortcut formula based on the Central Limit Theorem (CLT), Equation \@ref(eq:popvarCLTxbardeep) above, repeated below for clarity.
 
@@ -346,7 +352,10 @@ We use different names to refer to the resulting average variance estimate - we 
 
 #### Estimating $\sigma_{\bar{x}}^2$ with CLT
 
-Armed with the estimate of the variance of the people in the population ($s_{people}^2$) we can use the CLT shortcut formula to obtain an estimate of the variance of the distribution of sample means using Equation \@ref(eq:estpopvarmeansclt) below.
+
+**If we assume that random sampling error is the only source of variance in the distribution of sample means** we can estimate $\sigma_{\bar{x}}^2$ using the formula we derived from the Central Limit Theorem. 
+
+More specifically, armed with the estimate of the variance of the people in the population ($s_{people}^2$) we can use the CLT shortcut formula to obtain an estimate of the variance of the distribution of sample means using Equation \@ref(eq:estpopvarmeansclt) below.
 
 ```{=tex}
 \begin{equation} 
@@ -364,7 +373,7 @@ s_{\bar{x}}^2 &= \frac{s_{people}^2}{n}\\
 \end{aligned} 
 $$
 
-Thus, using Method 2: CLT shortcut, our estimate of the variance of the distribution of sample means is $s_{\bar{x}}^2 = `r est_mean_var_clt`$.
+Thus, using Approach 2: CLT shortcut, our estimate of the variance of the distribution of sample means, **due to random sampling error** is $s_{\bar{x}}^2 = `r est_mean_var_clt`$.
 
 **IMPORTANT:** This estimate of the variance of the distribution of sample means was based on using an estimate of the variance of the people in the population (i.e., $s_{people}^2 =`r est_pop_var_pooled`$). There were 12 degrees of freedom associated with $s_{people}^2$ which $s_{\bar{X}}^2$ depends upon. So we say there are 12 degrees of freedom associated with $s_{\bar{X}}^2$.
 
@@ -374,10 +383,16 @@ The table below summarizes our work so far.
 
 |       Attribute        |       Unknown Parameter        |                                    Estimate of Parameter                                     | $s_{\bar{x}}^2$ degrees of freedom |
 |:----------------------:|:------------------------------:|:--------------------------------------------------------------------------------------------:|:----------------------------------:|
-|   Method 1: Variance   | $\sigma_{\bar{x}}^2 =31.26472$ | $s_{\bar{x}}^2 = \frac{\sum_{i=1}^{a}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}= `r method1_var`$ |                 $a-1=3-1=2$                  |
-| Method 2 CLT: Variance | $\sigma_{\bar{x}}^2 =31.26472$ |                $s_{\bar{x}}^2 = \frac{s_{people}^2}{n}=`r est_mean_var_clt`$                 |                 $a(n-1)=3(5-1)=12$                 |
+|   Approach 1: Total variance   | $\sigma_{\bar{x}}^2 =31.26472$ | $s_{\bar{x}}^2 = \frac{\sum_{i=1}^{a}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}= `r method1_var`$ |                 $a-1=3-1=2$                  |
+| Approach 2: CLT Random sampling variance | $\sigma_{\bar{x}}^2 =31.26472$ |                $s_{\bar{x}}^2 = \frac{s_{people}^2}{n}=`r est_mean_var_clt`$                 |                 $a(n-1)=3(5-1)=12$                 |
 
-You can see in the table above, that the estimates for the variance of the distribution of sample means differ from each other and from "the truth" (31.26472) due to sampling error. Consequently, when we construct a ratio based on those variance estimate ($s_{\bar{x}}^2 = \frac{\sum_{i=1}^{a}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}= `r method1_var`$ and $s_{\bar{x}}^2 = \frac{s_{people}^2}{n}=`r est_mean_var_clt`$) the ratio will differ from "the truth" (1.00) due to sampling error.
+In the table above, Approach 1, estimates the total variance (from all sources) in sample means. In contrast, Approach 2, estimates the variance in sample means due strictly to random sampling error. In this particular scenario **we know** the only source of variability in sample means is random sampling error. So...we do the two numbers differ?
+
+Recall, that in Approach 1, we didn't have all of the sample means in the infinity large distribution of sample means. We based our estimate on only three of those means. So our estimate using, Approach 1, will differ from the truth due to sampling error -- because we only have 3 sample means - not the full infinite set of sample means.
+
+Likewise, recall that in Appraoch 2, we didn't know the variance of the population of people ($\sigma_{people}^2$) we had to rely on an esimate of that value ($s_{people}^2$), based on 15 people (three sets of 5). Consequently, Approach 2 will differ from the truth as well due to random sampling error.
+
+Because both Approach 1 and 2 will differ from the true due to random sampling error, when we construct a ratio, it too will differ from the truth due to random sampling error. That is, when we construct a ratio based on those variance estimate ($s_{\bar{x}}^2 = \frac{\sum_{i=1}^{a}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}= `r method1_var`$ and $s_{\bar{x}}^2 = \frac{s_{people}^2}{n}=`r est_mean_var_clt`$) the ratio will differ from "the truth" (1.00) due to sampling error.
 
 \
 
